# notionify

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.loki/: CONTINUITY.md
.loki/checklist/: checklist.json  verification-results.json
docs/: api_reference.md  conversion_matrix.md  error_cookbook.md  faq.md  migration_guide.md  prd.md  quickstart.md
docs/superpowers/plans/: 2026-05-01-cli-implementation.md
docs/superpowers/specs/: 2026-05-01-cli-design.md
examples/: notionify.test.toml
src/notionify/: __init__.py  async_client.py  client.py  config.py  errors.py  models.py
src/notionify/cli/: __init__.py  __main__.py  _common.py  config.py  main.py  output.py
src/notionify/cli/commands/: convert.py  diff.py  inspect.py  pull.py  push.py  sync.py
src/notionify/converter/: __init__.py  ast_normalizer.py  block_builder.py  inline_renderer.py  math.py  md_to_notion.py  notion_to_md.py  rich_text.py  tables.py
src/notionify/diff/: __init__.py  conflict.py  executor.py  lcs_matcher.py  planner.py  signature.py
src/notionify/image/: __init__.py  attach.py  detect.py  download.py  state.py  upload_multi.py  upload_single.py  validate.py
src/notionify/notion_api/: __init__.py  blocks.py  files.py  pages.py  rate_limit.py  retries.py  transport.py
src/notionify/observability/: __init__.py  logger.py  metrics.py
src/notionify/utils/: __init__.py  chunk.py  hashing.py  redact.py  text_split.py
tests/: conftest.py
tests/golden/: test_golden.py
tests/golden/fixtures/: basic.md  blockquote_rich_content.md  blockquote_with_code.md  code_blocks.md  code_language_aliases.md  code_with_backticks.md  complex.md  consecutive_blockquotes.md  consecutive_code_blocks.md  consecutive_tables.md  deeply_nested.md  dividers.md  escape_chars.md  heading_code_only.md  heading_inline_formatting.md  heading_with_links.md  images_external.md  images_with_captions.md  inline_mixed.md  links.md  links_complex.md  links_in_lists.md  list_with_blockquote.md  long_code_block.md  long_paragraph.md  math_block.md  math_in_context.md  math_in_links.md  math_in_table.md  math_inline.md  math_mixed.md  math_overflow.md  mixed_all.md  mixed_list_types.md  multiblock_annotations.md  nested_blockquotes.md  nested_lists.md  ordered_list_rich.md  strikethrough_combinations.md  table_rich_annotations.md  (+7 more)
tests/integration/: test_notion_api.py
tests/perf/: test_benchmarks.py
tests/unit/: test_async_edge_cases.py  test_client.py  test_converter_diff_pipeline.py  test_coverage_gaps.py  test_deep_nesting.py  test_edge_cases.py  test_encoding_edge_cases.py  test_error_context_lifecycle.py  test_metrics_conflict_logger.py  test_metrics_hook.py  test_observability.py  test_plan_page_update.py  test_properties.py  test_roundtrip.py  test_security.py
tests/unit/cli/: conftest.py  test_common.py  test_config.py  test_convert.py  test_diff.py  test_inspect.py  test_main.py  test_output.py  test_pull.py  test_push.py  test_sync.py
tests/unit/converter/: test_ast_normalizer.py  test_block_builder.py  test_callout_toggle_advanced.py  test_inline_renderer.py  test_math_overflow.py  test_md_to_notion.py  test_notion_to_md.py  test_rich_text.py  test_tables.py
tests/unit/diff/: test_conflict.py  test_diff.py  test_executor_failures.py  test_planner_advanced.py  test_signature.py
tests/unit/image/: test_image.py  test_image_boundaries.py  test_remote_download.py  test_remote_upload_pipeline.py  test_upload_multi.py  test_upload_single.py
tests/unit/notion_api/: test_pages_blocks_files.py  test_retries_rate_limit.py  test_transport.py  test_transport_concurrent.py
tests/unit/utils/: test_utils.py
