[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notionify"
version = "3.0.0"
description = "High-fidelity bidirectional Markdown ↔ Notion conversion and synchronization SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "notionify contributors" }]
keywords = ["notion", "markdown", "conversion", "sync", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "mistune>=3.0,<4.0",
    "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://github.com/notionify/notionify"
Repository = "https://github.com/notionify/notionify"
Issues = "https://github.com/notionify/notionify/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/notionify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C901", "RUF", "PT", "FURB", "PERF", "RET", "ASYNC", "ERA"]
ignore = ["SIM108", "SIM102", "RUF022", "PT001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF059", "C901", "ERA001"]

[tool.ruff.lint.mccabe]
max-complexity = 10
